--- a/package.xml
+++ b/package.xml
@@ -40,16 +40,28 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  
   <build_depend>sensor_msgs</build_depend>
   <build_depend>viso2_ros</build_depend>
   <build_depend>image_geometry</build_depend>
-  <build_depend>pcl_ros</build_depend>
   <build_depend>pcl_conversions</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>opencv_apps</build_depend>
+  <build_depend>image_transport</build_depend>
+  <build_depend>tf2</build_depend>
+  <build_depend>tf2_geometry_msgs</build_depend>
+  <build_depend>libpcl-all-dev</build_depend>
+  
   <run_depend>sensor_msgs</run_depend>
   <run_depend>viso2_ros</run_depend>
   <run_depend>image_geometry</run_depend>
-  <run_depend>pcl_ros</run_depend>
   <run_depend>pcl_conversions</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>opencv_apps</run_depend>
+  <run_depend>image_transport</run_depend>
+  <run_depend>tf2</run_depend>
+  <run_depend>tf2_geometry_msgs</run_depend>
+  <run_depend>libpcl-all</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
