--- a/package.xml
+++ b/package.xml
@@ -51,6 +51,8 @@
   <build_depend>tf2</build_depend>
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>std_msgs</build_depend>
   
   <run_depend>sensor_msgs</run_depend>
   <run_depend>viso2_ros</run_depend>
@@ -62,6 +64,8 @@
   <run_depend>tf2</run_depend>
   <run_depend>tf2_geometry_msgs</run_depend>
   <run_depend>libpcl-all</run_depend>
+  <run_depend>message_runtime</run_depend>
+  <run_depend>std_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
