flowのメッセージ型の変更に対応＋視差・右画像のオプティカルフローのsubscriberを追加
optical flowノードが使用する型を 'FlowArrayStamped' から 'FlowMap' に変更したため，それに対応させた
また，新旧左右の4枚のフレームでマッチングを行うために，視差と右画像のオプティカルフローを受信できるようにした．

本来は2つのコミットに分けるべきだが，分割が困難な状況だったのでまとめてコミットした

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_geometry_msgs
   message_generation
   std_msgs
+  stereo_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -114,7 +115,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES project-pointcloud-to-image
-  CATKIN_DEPENDS sensor_msgs viso2_ros image_geometry pcl_conversions geometry_msgs opencv_apps image_transport tf2 tf2_geometry_msgs message_runtime std_msgs
+  CATKIN_DEPENDS sensor_msgs viso2_ros image_geometry pcl_conversions geometry_msgs opencv_apps image_transport tf2 tf2_geometry_msgs message_runtime std_msgs stereo_msgs
   DEPENDS OpenCV
 )
 
