--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,7 @@
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>stereo_msgs</build_depend>
   
   <run_depend>sensor_msgs</run_depend>
   <run_depend>viso2_ros</run_depend>
@@ -66,6 +67,7 @@
   <run_depend>libpcl-all</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>stereo_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
