optical flowのデータ型をsensor_msgs/Imageに変更し，密なflowを前提に

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   std_msgs
   stereo_msgs
+  cv_bridge
 )
 
 ## System dependencies are found with CMake's conventions
