--- a/package.xml
+++ b/package.xml
@@ -54,6 +54,7 @@
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>stereo_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
   
   <run_depend>sensor_msgs</run_depend>
   <run_depend>viso2_ros</run_depend>
@@ -68,6 +69,7 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>stereo_msgs</run_depend>
+  <run_depend>cv_bridge</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
