--- a/package.xml
+++ b/package.xml
@@ -55,6 +55,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>stereo_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
   
   <run_depend>sensor_msgs</run_depend>
   <run_depend>viso2_ros</run_depend>
@@ -70,6 +71,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>stereo_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
