--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,9 +145,10 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(${PROJECT_NAME}_node 
-  src/moving_object_detector_node.cpp
-  src/moving_object_detector.cpp
+  src/3d_recontruction.cpp
   src/flow_3d.cpp
+  src/moving_object_detector.cpp
+  src/moving_object_detector_node.cpp
 )
 
 ## Rename C++ executable without prefix
