--- a/moving_object_detector/cfg/DynamicReconfigure.cfg
+++ b/moving_object_detector/cfg/DynamicReconfigure.cfg
@@ -12,7 +12,7 @@ gen.add("flow_length_diff", double_t, 0, "Maximum allowable flow length diff use
 gen.add("flow_start_diff", double_t, 0, "Maximum allowable flow start points coodinate diff used for clustering", 0.1, 0.01, 1.0)
 gen.add("flow_radian_diff", double_t, 0, "Maximum allowable angular[rad] between two flows used for clustering", 0.17, 0.01, 1.0)
 gen.add("flow_axis_max", double_t, 0, "Maximum flow length used for display 3D flow points as colored pointcloud", 0.5, 0.01, 1.0)
-gen.add("matching_tolerance", int_t, 0, "Error tolerance[pixel] used in matching points between left, right, current, previous frames", 100, 1, 100)
+gen.add("matching_tolerance", int_t, 0, "Error tolerance[pixel] used in matching points between left, right, current, previous frames. Disabled when -1", -1, -1, 100)
 gen.add("cluster_element_num", int_t, 0, "Minimum number of cluster element treated as moving object", 10, 1, 100)
 
 exit(gen.generate(PACKAGE, "moving_object_detector", "MovingObjectDetector"))
