add class for process disparity image
Currently, the node receives both of disparity image and depth image.
But depth image is made from disparity, so remove dependency of depth
image is better.

--- a/moving_object_detector/CMakeLists.txt
+++ b/moving_object_detector/CMakeLists.txt
@@ -149,6 +149,7 @@ add_executable(${PROJECT_NAME}_node
   src/flow_3d.cpp
   src/moving_object_detector.cpp
   src/moving_object_detector_node.cpp
+  src/process_disparity_image.cpp
 )
 
 ## Rename C++ executable without prefix
