--- a/moving_object_detector/package.xml
+++ b/moving_object_detector/package.xml
@@ -47,6 +47,7 @@
   <build_depend>image_geometry</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>opencv_apps</build_depend>
   <build_depend>pcl_conversions</build_depend>
   <build_depend>sensor_msgs</build_depend>
@@ -62,6 +63,7 @@
   <run_depend>image_geometry</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>libpcl-all</run_depend>
+  <run_depend>message_runtime</run_depend>
   <run_depend>opencv_apps</run_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>sensor_msgs</run_depend>
