--- a/moving_object_detector/CMakeLists.txt
+++ b/moving_object_detector/CMakeLists.txt
@@ -105,6 +105,7 @@ generate_messages(
 ## Generate dynamic reconfigure parameters in the 'cfg' folder
 generate_dynamic_reconfigure_options(
   cfg/DynamicReconfigure.cfg
+  cfg/Velocity2Color.cfg
 )
 
 ###################################
