Format CMakeLists.txt

--- a/moving_object_detector/CMakeLists.txt
+++ b/moving_object_detector/CMakeLists.txt
@@ -29,7 +29,6 @@ add_message_files(
   MovingObjectArray.msg
   Size3D.msg
 )
-
 generate_messages(
   DEPENDENCIES
   geometry_msgs
@@ -42,8 +41,21 @@ generate_dynamic_reconfigure_options(
 )
 
 catkin_package(
-  CATKIN_DEPENDS dynamic_reconfigure geometry_msgs image_geometry image_transport message_runtime opencv_apps pcl_conversions sensor_msgs std_msgs stereo_msgs tf2 tf2_geometry_msgs
-  DEPENDS OpenCV
+  CATKIN_DEPENDS
+    dynamic_reconfigure
+    geometry_msgs
+    image_geometry
+    image_transport
+    message_runtime 
+    opencv_apps 
+    pcl_conversions 
+    sensor_msgs 
+    std_msgs 
+    stereo_msgs 
+    tf2 
+    tf2_geometry_msgs
+  DEPENDS
+    OpenCV
 )
 
 include_directories(
@@ -62,19 +74,14 @@ add_executable(${PROJECT_NAME}_node
   src/moving_object_detector_node.cpp
   src/process_disparity_image.cpp
 )
-
-add_executable(velocity2color_node 
-  src/velocity2color.cpp
-)
-
 add_dependencies(${PROJECT_NAME}_node ${PROJECT_NAME}_gencfg)
-
 target_link_libraries(${PROJECT_NAME}_node
   ${catkin_LIBRARIES}
   ${OpenCV_LIBRARIES}
   ${PCL_COMMON_LIBRARIES}
 )
 
+add_executable(velocity2color_node src/velocity2color.cpp)
 target_link_libraries(velocity2color_node
   ${catkin_LIBRARIES}
   ${PCL_COMMON_LIBRARIES}
