--- a/moving_object_detector/package.xml
+++ b/moving_object_detector/package.xml
@@ -20,6 +20,7 @@
   <depend>stereo_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>visualization_msgs</depend>
 
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>message_generation</build_depend>
