Rename dynamic configure file for moving_object_detector

--- a/moving_object_detector/CMakeLists.txt
+++ b/moving_object_detector/CMakeLists.txt
@@ -37,7 +37,7 @@ generate_messages(
 )
 
 generate_dynamic_reconfigure_options(
-  cfg/DynamicReconfigure.cfg
+  cfg/MovingObjectDetector.cfg
   cfg/Velocity2Color.cfg
 )
 
