--- a/cfg/VelocityEstimator.cfg
+++ b/cfg/VelocityEstimator.cfg
@@ -8,4 +8,4 @@ gen = ParameterGenerator()
 gen.add("downsample_scale", int_t, 0, "Downsample scale of calculate move points in 3D", 16, 1, 100)
 gen.add("matching_tolerance", double_t, 0, "Error tolerance[pixel] used in matching points between left, right, current, previous frames. Disabled when minus", 1.0, -1.0, 30.0)
 
-exit(gen.generate(PACKAGE, "moving_object_detector", "MovingObjectDetector"))
+exit(gen.generate(PACKAGE, "moving_object_detector", "VelocityEstimator"))
