--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
   <depend>pcl_conversions</depend>
+  <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>stereo_msgs</depend>
