--- a/package.xml
+++ b/package.xml
@@ -26,7 +26,10 @@
   <build_depend>message_generation</build_depend>
 
   <exec_depend>libpcl-all</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
   <exec_depend>viso2_ros</exec_depend>
 
   <export>
