--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <depend>geometry_msgs</depend>
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
+  <depend>nav_msgs</depend>
   <depend>pcl_conversions</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
@@ -26,9 +27,9 @@
   <build_depend>message_generation</build_depend>
 
   <exec_depend>libpcl-all</exec_depend>
-  <exec_depend>nav_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>rospy</exec_depend>
+  <exec_depend>tf2_odometry_msg</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>viso2_ros</exec_depend>
 
