--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ include_directories(
   include
   ${catkin_INCLUDE_DIRS}
   ${openCV_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIRS}
   ${PCL_LIBRARY_DIRS}
 )
 
