--- a/package.xml
+++ b/package.xml
@@ -30,6 +30,7 @@
   <exec_depend>libpcl-all</exec_depend>
   <exec_depend>mars_rover_description</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>ros_numpy<exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>tf2_odometry_msg</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
