オドメトリ真値を座標変換するためのノードを追加
Gazeboから得たオドメトリの真値は、Gazeboのworld原点を基準とした座標
そのため、VISO2の推定値と比較する前に座標変換が必要

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,7 @@ catkin_install_python(
     nodes/point_frame_converter
     nodes/odometry_frame_converter
     nodes/simulation_exp_result_calc
+    nodes/transform_truth_odom
   DESTINATION
     ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
