--- a/cfg/Clusterer.cfg
+++ b/cfg/Clusterer.cfg
@@ -5,10 +5,8 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("cluster_size", int_t, 0, "Minimum number of cluster element treated as moving object", 15, 1, 100)
-gen.add("direction_diff", double_t, 0, "Maximum allowable angular[rad] between two velocity in same cluster", 0.15, 0.01, 1.0)
+gen.add("cluster_size", int_t, 0, "Minimum number of cluster element treated as moving object", 15, 200, 1000000)
+gen.add("depth_diff", double_t, 0, "Depth difference used for distinguish points from same cluster or not", 0.1, 0.01, 1.0)
 gen.add("dynamic_speed", double_t, 0, "Velocity length[meter] used to distinguish dynamic points from static points", 0.12, 0.01, 1.0)
-gen.add("position_diff", double_t, 0, "Maximum distance between two points treated as same cluster", 0.2, 0.01, 1.0)
-gen.add("speed_diff", double_t, 0, "Maximum diff of speed between two points treated as same cluster", 0.12, 0.01, 1.0)
 
 exit(gen.generate(PACKAGE, "moving_object_detector", "Clusterer"))
