color_set_を別クラスに分離

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ link_directories(${PCL_LIBRARY_DIRS})
 add_executable(clusterer_node 
   src/clusterer.cpp
   src/clusterer_node.cpp
+  src/color_set.cpp
 )
 add_dependencies(clusterer_node ${PROJECT_NAME}_gencfg ${${PROJECT_NAME}_EXPORTED_TARGETS})
 target_link_libraries(clusterer_node
