--- a/cfg/Clusterer.cfg
+++ b/cfg/Clusterer.cfg
@@ -5,9 +5,9 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("cluster_size", int_t, 0, "Minimum number of cluster element treated as moving object", 15, 200, 1000000)
-gen.add("depth_diff", double_t, 0, "Depth difference used for distinguish points from same cluster or not", 0.1, 0.01, 1.0)
-gen.add("dynamic_speed", double_t, 0, "Velocity length[meter] used to distinguish dynamic points from static points", 0.12, 0.01, 1.0)
-gen.add("neighbor_distance", int_t, 0, "Search distance [pixel] between two points", 1, 1, 10)
+gen.add("cluster_size", int_t, 0, "Minimum number of cluster element treated as moving object", 2500, 100, 10000)
+gen.add("depth_diff", double_t, 0, "Depth difference used for distinguish points from same cluster or not", 0.15, 0.01, 1.0)
+gen.add("dynamic_speed", double_t, 0, "Velocity length[meter] used to distinguish dynamic points from static points", 0.3, 0.01, 1.0)
+gen.add("neighbor_distance", int_t, 0, "Search distance [pixel] between two points", 4, 1, 10)
 
 exit(gen.generate(PACKAGE, "moving_object_detector", "Clusterer"))
