--- a/package.xml
+++ b/package.xml
@@ -26,6 +26,7 @@
 
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>message_generation</build_depend>
+  <buildtool_depend>kkl</buildtool_depend>
 
   <exec_depend>gazebo_factory_world</exec_depend>
   <exec_depend>libpcl-all</exec_depend>
