--- a/moving_object_detector/package.xml
+++ b/moving_object_detector/package.xml
@@ -23,6 +23,7 @@
   <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>visualization_msgs</depend>
+  <depend>viso2_ros</depend>
 
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>message_generation</build_depend>
@@ -37,5 +38,4 @@
   <exec_depend>tf2_odometry_msg</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>turtlebot3_stereo_description</exec_depend>
-  <exec_depend>viso2_ros</exec_depend>
 </package>
