--- a/moving_object_detector/package.xml
+++ b/moving_object_detector/package.xml
@@ -15,6 +15,7 @@
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
   <depend>nav_msgs</depend>
+  <depend>optical_flow_msg</depend>
   <depend>pcl_conversions</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
