velocity_estimatorを別パッケージに分離

--- a/moving_object_detector/CMakeLists.txt
+++ b/moving_object_detector/CMakeLists.txt
@@ -1,28 +1,22 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(moving_object_detector)
 
-add_compile_options(-std=c++11)
-
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
-  dis_flow
   dynamic_reconfigure
   geometry_msgs
-  image_geometry
   image_transport
   kkl
   message_generation
   moving_object_msgs
-  optical_flow_msg
   pcl_conversions
   roscpp
   sensor_msgs
   std_msgs
-  stereo_msgs
   tf2
   tf2_geometry_msgs
-  viso2_ros
   visualization_msgs
+  velocity_estimator
 )
 
 find_package(OpenCV)
@@ -41,22 +35,13 @@ add_message_files(
   TrackerCovarianceArray.msg
 )
 
-add_service_files(
-  FILES
-  InputSynchronizerPublish.srv
-)
-
 generate_messages(
   DEPENDENCIES
   geometry_msgs
   std_msgs
 )
 
-generate_dynamic_reconfigure_options(
-  cfg/Clusterer.cfg
-  cfg/VelocityEstimator.cfg
-  cfg/Velocity2Color.cfg
-)
+generate_dynamic_reconfigure_options(cfg/Clusterer.cfg)
 
 catkin_package(
   CATKIN_DEPENDS
@@ -103,15 +88,6 @@ target_link_libraries(display_moving_objects_2d_node
   ${OpenCV_LIBS}
 )
 
-add_executable(input_synchronizer_node 
-  src/input_synchronizer.cpp
-  src/input_synchronizer_node.cpp
-)
-target_link_libraries(input_synchronizer_node
-  ${catkin_LIBRARIES}
-  ${PCL_COMMON_LIBRARIES}
-)
-
 add_executable(moving_objects_tracker_node
   src/moving_objects_tracker.cpp
   src/moving_objects_tracker_node.cpp
@@ -119,25 +95,6 @@ add_executable(moving_objects_tracker_node
 add_dependencies(moving_objects_tracker_node ${${PROJECT_NAME}_EXPORTED_TARGETS})
 target_link_libraries(moving_objects_tracker_node
   ${catkin_LIBRARIES}
-)
-
-add_executable(velocity_estimator_node
-  src/velocity_estimator.cpp
-  src/velocity_estimator_node.cpp
-  src/process_disparity_image.cpp
-)
-add_dependencies(velocity_estimator_node ${PROJECT_NAME}_gencfg ${${PROJECT_NAME}_EXPORTED_TARGETS})
-target_link_libraries(velocity_estimator_node
-  ${catkin_LIBRARIES}
-  ${OpenCV_LIBS}
-  ${PCL_COMMON_LIBRARIES}
-)
-
-add_executable(velocity2color_node src/velocity2color_node.cpp)
-add_dependencies(velocity2color_node ${PROJECT_NAME}_gencfg)
-target_link_libraries(velocity2color_node
-  ${catkin_LIBRARIES}
-  ${PCL_COMMON_LIBRARIES}
 )
 
 catkin_install_python(
