--- a/velocity_estimator/cfg/VelocityEstimator.cfg
+++ b/velocity_estimator/cfg/VelocityEstimator.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "moving_object_detector"
+PACKAGE = "velocity_estimator"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -7,4 +7,4 @@ gen = ParameterGenerator()
 
 gen.add("matching_tolerance", double_t, 0, "Error tolerance[pixel] used in matching points between left, right, current, previous frames. Disabled when minus", 0.6, -1.0, 30.0)
 
-exit(gen.generate(PACKAGE, "moving_object_detector", "VelocityEstimator"))
+exit(gen.generate(PACKAGE, "velocity_estimator", "VelocityEstimator"))
