Clustererを別パッケージに分離

--- a/velocity_pc_clusterer/cfg/Clusterer.cfg
+++ b/velocity_pc_clusterer/cfg/Clusterer.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "moving_object_detector"
+PACKAGE = "velocity_pc_clusterer"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -10,4 +10,4 @@ gen.add("depth_diff", double_t, 0, "Depth difference used for distinguish points
 gen.add("dynamic_speed", double_t, 0, "Velocity length[meter] used to distinguish dynamic points from static points", 0.3, 0.01, 1.0)
 gen.add("neighbor_distance", int_t, 0, "Search distance [pixel] between two points", 4, 1, 10)
 
-exit(gen.generate(PACKAGE, "moving_object_detector", "Clusterer"))
+exit(gen.generate(PACKAGE, "velocity_pc_clusterer", "Clusterer"))
