要素の終了タグが間違っていたため修正

--- a/velocity_pc_clusterer/package.xml
+++ b/velocity_pc_clusterer/package.xml
@@ -14,5 +14,5 @@
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
   <depend>visualization_msgs</depend>
-  <build_depend>velocity_estimator</depend>
+  <build_depend>velocity_estimator</build_depend>
 </package>
