パッケージ名をmoving_object_detectorからmoving_object_trackerに変更
他の部分は別パッケージに分離し、trackerのみが残ったため

--- a/moving_object_tracker/CMakeLists.txt
+++ b/moving_object_tracker/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(moving_object_detector)
+project(moving_object_tracker)
 
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
