--- a/moving_object_tracker/package.xml
+++ b/moving_object_tracker/package.xml
@@ -7,37 +7,13 @@
   <license>TODO</license>
   
   <buildtool_depend>catkin</buildtool_depend>
-
-  <depend>cv_bridge</depend>
-  <depend>dis_flow</depend>
-  <depend>dynamic_reconfigure</depend>
   <depend>geometry_msgs</depend>
-  <depend>image_geometry</depend>
-  <depend>image_transport</depend>
-  <depend>nav_msgs</depend>
-  <depend>optical_flow_msg</depend>
-  <depend>pcl_conversions</depend>
+  <depend>moving_object_msgs</depend>
   <depend>roscpp</depend>
-  <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
-  <depend>stereo_msgs</depend>
-  <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
-  <depend>visualization_msgs</depend>
-  <depend>viso2_ros</depend>
-
-  <build_depend>libpcl-all-dev</build_depend>
+  <depend>tf2_ros</depend>
+  <build_depend>kkl</build_depend> <!-- from https://aisl-serv6.aisl.cs.tut.ac.jp:20443/koide/grace_person_following -->
   <build_depend>message_generation</build_depend>
-  <build_depend>velocity_estimator</build_depend>
-  <buildtool_depend>kkl</buildtool_depend> <!-- from https://aisl-serv6.aisl.cs.tut.ac.jp:20443/koide/grace_person_following -->
-
-  <exec_depend>gazebo_factory_world</exec_depend>
-  <exec_depend>libpcl-all</exec_depend>
-  <exec_depend>mars_rover_description</exec_depend>
   <exec_depend>message_runtime</exec_depend>
-  <exec_depend>ros_numpy</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>tf2_odometry_msg</exec_depend>
-  <exec_depend>tf2_ros</exec_depend>
-  <exec_depend>turtlebot3_stereo_description</exec_depend>
 </package>
