--- a/velocity_estimator/package.xml
+++ b/velocity_estimator/package.xml
@@ -19,8 +19,7 @@
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
   <depend>stereo_msgs</depend>
-  <depend>tf2</depend>
-  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_eigen</depend>
   <depend>viso2_ros</depend>
   <depend>libopencv-dev</depend>
   <build_depend>libpcl-all-dev</build_depend>
