視覚化時のパラメータをDynamic Reconfigureに追加

--- a/velocity_estimator/cfg/VelocityEstimator.cfg
+++ b/velocity_estimator/cfg/VelocityEstimator.cfg
@@ -6,5 +6,6 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
 gen.add("matching_tolerance", double_t, 0, "Error tolerance[pixel] used in matching points between left, right, current, previous frames. Disabled when minus", 0.6, -1.0, 30.0)
+gen.add("max_color_velocity", double_t, 0, "When velocity of point is faster than this parameter[m], maximum color intensity is assigned at velocity image", 0.1, 0.1, 10.0)
 
 exit(gen.generate(PACKAGE, "velocity_estimator", "VelocityEstimator"))
