Fix #24: 座標変換の実装

--- a/project_moving_objects_on_image/CMakeLists.txt
+++ b/project_moving_objects_on_image/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package(catkin REQUIRED COMPONENTS
   moving_object_msgs
   roscpp
   sensor_msgs
+  tf2_geometry_msgs
+  tf2_ros
 )
 
 catkin_package()
