--- a/project_moving_objects_on_image/package.xml
+++ b/project_moving_objects_on_image/package.xml
@@ -14,4 +14,6 @@
   <depend>moving_object_msgs</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
 </package>
