--- a/velocity_estimator/package.xml
+++ b/velocity_estimator/package.xml
@@ -13,6 +13,7 @@
   <depend>image_geometry</depend>
   <depend>image_transport</depend>
   <depend>message_filters</depend>
+  <depend>nodelet</depend>
   <depend>dense_flow_msgs</depend>
   <depend>pcl_conversions</depend>
   <depend>roscpp</depend>
@@ -26,4 +27,8 @@
   <build_depend>message_generation</build_depend>
   <exec_depend>libpcl-all</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+
+  <export>
+    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
+  </export>
 </package>
